<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@drawable/mainactivitybackgraund"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">


    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginBottom="5dp"
        android:visibility="gone" />






    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"

        android:layout_height="match_parent">





        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <Button
                android:id="@+id/btndil"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:layout_gravity="left"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/btn_dilicin"
                android:text="@string/change"
                android:textColor="#1e272e" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"

                    android:layout_gravity="center|left"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:text=" Antalya"
                    android:textColor="#576574"
                    android:textSize="20dp"
                    android:textStyle="bold|italic" />


                <TextView
                    android:layout_width="65dp"
                    android:layout_height="wrap_content"

                    android:layout_gravity="center|right"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:text=" IVF"
                    android:textColor="#485460"
                    android:textSize="28dp"
                    android:textStyle="bold" />
            </LinearLayout>
            <ImageView
                android:layout_width="60dp"
                android:layout_gravity="center"
                android:background="@drawable/loginivf"
                android:backgroundTint="#485460"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="0dp"
                android:layout_height="60dp"
               />
              <TextView
                  android:layout_width="wrap_content"
                  android:text="@string/prompt_email"
                  android:textStyle="bold"
                  android:textSize="20dp"
                  android:textColor="#485460"
                  android:layout_marginBottom="8dp"
                  android:layout_marginTop="8dp"
                  android:layout_gravity="center"
                  android:layout_height="wrap_content" />
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:drawableLeft="@drawable/user"
                    android:drawableTint="#485460"
                    android:drawablePadding="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_username"
                    android:textColorHint="#485460"
                    android:textColor="#2f3640"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:drawableLeft="@drawable/password"
                    android:drawablePadding="8dp"
                    android:drawableTint="#485460"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="#485460"
                    android:hint="@string/prompt_password"
                    android:textColor="#2f3640"
                    android:imeActionId="6"

                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>


                <Button
                    android:id="@+id/email_sign_in_button"
                    style="?android:textAppearanceSmall"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="30dp"
                    android:layout_gravity="center"
                    android:layout_width="100dp"

                    android:layout_height="60dp"
                    android:background="@drawable/button_selector"
                    android:layout_marginTop="10dp"
                    android:text="@string/action_sign_in"
                    android:textColor="#485460"
                    android:textStyle="bold" />


        </LinearLayout>
    </ScrollView>

</LinearLayout>